--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
   id "io.freefair.lombok" version "5.3.0"
 }
 
-group = 'kr.mjc.jacob'
+group = 'kr.mjc.oscar'
 version = '0.0.1-SNAPSHOT'
 
 repositories {
